updated styling for icon to fix shifting of text

--- a/src/sass/_bidTracker.scss
+++ b/src/sass/_bidTracker.scss
@@ -150,6 +150,10 @@ $register-hide-icon: 95%;
     font-size: 25px;
   }
 
+  .interactive-element {
+    margin: 10px 0px -35px 10px;
+  }
+
   .bid-tracker-overlay-alert-content-container {
     margin: 0 auto;
     position: relative;
